--- a/ex3.html
+++ b/ex3.html
@@ -31,7 +31,7 @@
                var textNode = document.createTextNode(input.value);
                li.appendChild(textNode);
                ul.appendChild(li);
-               input="";
+               input.value="";
             }
             
          }
